use ssh keys for gocd
Signed-off-by: Matthias Kümmerer <matthias@matthias-k.org>

--- a/stable/gocd/values.yaml
+++ b/stable/gocd/values.yaml
@@ -289,3 +289,7 @@ agent:
   ## Affinity for assigning pods to specific nodes
   ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
   affinity: {}
+security:
+  ssh:
+    enabled: false
+    secretName: gocd-ssh
