Add option to set service account for agents
Signed-off-by: Matthias Kümmerer <matthias@matthias-k.org>

--- a/stable/gocd/values.yaml
+++ b/stable/gocd/values.yaml
@@ -266,6 +266,8 @@ agent:
       enabled: false
       # agent.security.ssh.secretName specifies the name of the k8s secret object that contains the ssh key and known hosts
       secretName: gocd-agent-ssh
+  # if set to a string, use this service account for the agent pods. The account won't be created!
+  serviceAccountName: null
 
   ## Configure GoCD agent resource requests and limits
   ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
